# react-native-ffmpeg-wrapper

./: CONTRIBUTING.md  FfmpegWrapper.podspec  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/src/main/cpp/ffmpeg/include/libavformat/: dashenc.d  hlsenc.d  libavformat.pc  sdp.d
android/src/main/cpp/ffmpeg/include/libavutil/: libavutil.pc  libavutil.so.59
android/src/main/java/com/ffmpegwrapper/: FFmpegCommandBuilder.kt  FFmpegNative.kt  FfmpegWrapperModule.kt  FfmpegWrapperPackage.kt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/ffmpegwrapper/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/FfmpegWrapperExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/FfmpegWrapperExample.xcodeproj/: project.pbxproj
example/ios/FfmpegWrapperExample.xcodeproj/xcshareddata/xcschemes/: FfmpegWrapperExample.xcscheme
example/src/: App.tsx
ios/: FfmpegWrapper.h  FfmpegWrapper.mm
src/: NativeFfmpegWrapper.ts  index.tsx
